# things-cli

./: Cargo.toml
.claude-plugin/: marketplace.json
skills/things/: SKILL.md
skills/things/references/: area-tag-schema.md  commands.md  project-schema.md  task-schema.md
src/: cli.rs  config.rs  db.rs  main.rs  models.rs  resolve.rs  shortid.rs  things_url.rs
src/commands/: add.rs  areas.rs  auth.rs  complete.rs  edit.rs  list.rs  mod.rs  projects.rs  refs.rs  search.rs  show.rs  tags.rs
src/output/: human.rs  json.rs  mod.rs
tests/: auth_test.rs  cli_test.rs  db_test.rs  helpers.rs  json_test.rs
