[package]
name = "things-cli"
version = "0.1.0"
edition = "2021"
description = "A CLI for Things 3"

[[bin]]
name = "things"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
comfy-table = "7"
dirs = "5"
open = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
